[package]
name = "geodude"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }

# Client feature
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
serde_json = { version = "1", optional = true }

# Server feature
ip2location = { version = "0.5", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "process"], optional = true }
dotenvy = { version = "0.15", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
default = ["client"]
client = ["dep:reqwest", "dep:serde_json"]
server = [
    "dep:ip2location",
    "dep:axum",
    "dep:tokio",
    "dep:dotenvy",
    "dep:tracing",
    "dep:tracing-subscriber",
]

[[bin]]
name = "geodude"
path = "src/main.rs"
required-features = ["server"]
